--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,10 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+#main-conteudo{
+  display: flex;
+  width: 100%;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
