--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -1,4 +1,4 @@
-#main{
+.main{
     width: 100%;
     height: 100vh;
     display: flex;
@@ -7,28 +7,27 @@
     background-color: #1E1E1E;
 }
 
-#login_card{
+.login_card{
     width: 350px;
     height: 350px;
     text-align: center;
     background-color: #424141;
     align-self: center;
     border-radius: 30px;
-    
 }
 
-#login_field {
+.login_field {
     border-radius: 5px;
     margin: 0.5rem;
     height: 1.2rem;
     width: 15rem;
 }
 
-#login_field:hover {
+.login_field:hover {
     border-color: white;
 }
 
-#login_btn {
+.login_btn {
     margin-top: 2rem;
     border-radius: 5px;
     cursor: pointer;
@@ -36,17 +35,30 @@
     width: 4rem;
 }
 
-#login_btn:hover {
+.login_btn:hover {
     border-color: white;
 }
 
-#login_title {
+.login_title {
     color: white;
 }
 
-#login_form {
+.login_form {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 4rem;
+    margin-top: 2.5rem;
+}
+
+input:invalid {
+    border: 3px solid red;
+}
+
+input:invalid:hover {
+    border: 3px solid red;
+}
+
+.errors {
+    color: red;
+    font-size: 14px;
 }
