--- a/src/Pages/Carteira/Carteira.css
+++ b/src/Pages/Carteira/Carteira.css
@@ -2,7 +2,10 @@
     width: 100%;
     background-color: #1E1E1E;
 }
-
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: rgb(255, 255, 255);
+    opacity: 1; /* Firefox */
+}
 #heade{
     margin-top: 2.5rem;
     display: flex;
@@ -22,11 +25,15 @@
     transform: translate(-50%, -50%);
     width: 50%;
     height: 50%;
-    background-color: rgb(241, 240, 240);
+    background-color: rgb(56, 55, 55);
     border: '2px solid #000';
     box-shadow: 24;
-    color: black;
+    color: rgb(255, 255, 255);
     
+}
+#value{
+    border-color: white !important;
+    color: white !important;
 }
 #titulo-modal{
     margin-left: 2rem;
@@ -65,7 +72,6 @@
     margin-left: 3rem;
 }
 #footer-modal{
-    margin-top: 2rem;
     display: flex;
     justify-content: end;
     margin-right: 2rem;
