--- a/src/Pages/Carteira/Carteira.css
+++ b/src/Pages/Carteira/Carteira.css
@@ -2,10 +2,7 @@
     width: 100%;
     background-color: #1E1E1E;
 }
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: rgb(255, 255, 255);
-    opacity: 1; /* Firefox */
-}
+
 #heade{
     margin-top: 2.5rem;
     display: flex;
@@ -13,7 +10,6 @@
     flex-direction: row;
     align-items: baseline;
     width: 100%;
-
 }
 #grid-modal{
     margin-left: 3rem;
@@ -29,7 +25,6 @@
     border: '2px solid #000';
     box-shadow: 24;
     color: rgb(255, 255, 255);
-    
 }
 #value{
     border-color: white !important;
@@ -49,8 +44,6 @@
     margin-left: 5vh;
     display: flex;
     justify-content: start;
-
-    
 }
 #icone-gastos{
     margin-top: 15px;
@@ -61,7 +54,9 @@
     margin-bottom: 15px;
     margin-right: 10vh;
 }
-
+#selects{
+    color: rgb(14, 13, 13);
+}
 #table_div {
     margin-top: 1rem;
     width: 100%;
