--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -11,7 +11,7 @@
     width: 350px;
     height: 350px;
     text-align: center;
-    background-color: #424141;
+    background-color: #3d3c3c;
     align-self: center;
     border-radius: 30px;
 }
@@ -21,12 +21,17 @@
     margin: 0.5rem;
     height: 1.2rem;
     width: 15rem;
+
+}
+.login_field:focus{
+    transition: 0.3s;
+    box-shadow: 1px -1.1px 1px #69F0AE;
+    width: 16rem;
+    
 }
 
 
-.login_field:hover {
-    border-color: rgb(0, 0, 0);
-}
+
 
 .login_btn {
     margin-top: 2rem;
@@ -35,23 +40,33 @@
     height: 1.5rem;
     width: 4rem;
     border-radius: 25px;
-    width: 100px;
-    height: 25px;
+    width: 200px;
+    height: 35px;
+    outline: none;
+    border: none;
+}
+.login_btn:hover{
+   transform: translate(2px, -2.10px);
+   transition: 1.1s;
+   box-shadow: 3px 1.2px 3px #69F0AE;
+   background-color: rgb(21, 226, 147);
 }
 
 .login_btn:hover {
-    border-color: white;
+    border-color: rgb(238, 199, 199);
 }
 #email{
     border-radius: 20px;
     border: none;
-    height: 25px;
+    height: 30px;
+    outline: none;
 }
 
 #password{
     border-radius: 20px;
     border: none;
-    height: 25px;
+    height: 30px;
+    outline: none;
 }
 
 .login_title {
